--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <main class="container-fluid">
         <section class="row d-flex justify-content-center">
             <div class="col-10" id="welcome">
-                
+                <div id="opening">
+                    <h1>ALWAYS. BELIEVE.</h1>
+                    <p>This is a story about one of the greatest comeback in sports history.
+</p>
+                </div>
             </div>
 
 
