--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" type="text/css">
     <title>Always.Believe.</title>
   </head>
   <body>
@@ -17,13 +18,16 @@
                 <div id="opening">
                     <h1>ALWAYS. BELIEVE.</h1>
                     <p>This is a story about one of the greatest comeback in sports history.
-</p>
+                    </p>
+                    <i class="fa fa-angle-double-down" aria-hidden="true"></i>
                 </div>
             </div>
 
 
 
-            <div class="col-10" id="chapt0"></div>
+            <div class="col-10" id="chapt0">
+                
+            </div>
 
 
 
