added-arrow-anim

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <body>
     <main class="container-fluid">
         <section class="row d-flex justify-content-center">
-            <div class="col-10" id="welcome">
+            <!-- welcome message -->
+            <div class="col-10 p-0" id="welcome">
                 <div id="opening">
+                    <div class="col d-none d-md-block p-0"><img src="images/huddle-dark.jpg" alt="team"></div>
                     <h1>ALWAYS. BELIEVE.</h1>
                     <p>This is a story about one of the greatest comeback in sports history.
                     </p>
@@ -26,7 +28,7 @@
 
 
             <div class="col-10" id="chapt0">
-                
+
             </div>
 
 
