added-link-to-arrow

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
+    <!-- Required meta tags --> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -13,15 +13,15 @@
   </head>
   <body>
     <main class="container-fluid">
-        <section class="row d-flex justify-content-center">
-            <!-- welcome message -->
-            <div class="col-10 p-0" id="welcome">
-                <div id="opening">
-                    <div class="col d-none d-md-block p-0"><img src="images/huddle-dark.jpg" alt="team"></div>
+        <section class="row d-flex justify-content-center m-0">
+            <!-- welcome message -->       
+            <div class="col-10 p-0" id="welcome">       
+                <div class="p-0" id="opening"> 
+                    <div class="col p-0"><img src="images/huddle-dark.jpg" alt="team"></div>
                     <h1>ALWAYS. BELIEVE.</h1>
                     <p>This is a story about one of the greatest comeback in sports history.
                     </p>
-                    <i class="fa fa-angle-double-down" aria-hidden="true"></i>
+                    <a href="_target"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div>
             </div>
 
