--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <main class="container-fluid">
-        <section class="row d-flex justify-content-center m-0">
+        <section class="row d-flex justify-center p-0 m-0">
             <!-- welcome message -->       
-            <div class="col-10 p-0" id="welcome">       
-                <div class="p-0" id="opening"> 
-                    <div class="col p-0"><img src="images/huddle-dark.jpg" alt="team"></div>
+            <div class="col-12 p-0 m-0 " id="welcome">
+                <div class="row p-0 justify-content-center" id="opening">
+                    <img src="images/huddle-dark.jpg" alt="team">
                     <h1>ALWAYS. BELIEVE.</h1>
                     <p>This is a story about one of the greatest comeback in sports history.
                     </p>
@@ -27,34 +27,34 @@
 
 
 
-            <div class="col-10" id="chapt0">
+            <div class="col-12" id="chapt0">
 
             </div>
 
 
 
-            <div class="col-10" id="chapt1"></div>
+            <div class="col-12" id="chapt1"></div>
 
 
 
-            <div class="col-10" id="chapt2"></div>
+            <div class="col-12" id="chapt2"></div>
 
 
 
-            <div class="col-10" id="chapt3"></div>
+            <div class="col-12" id="chapt3"></div>
 
 
 
-            <div class="col-10" id="chapt4"></div>
+            <div class="col-12" id="chapt4"></div>
 
 
 
-            <div class="col-10" id="chapt5"></div>
+            <div class="col-12" id="chapt5"></div>
 
 
 
 
-            <div class="col-10" id="chapt6"></div>
+            <div class="col-12" id="chapt6"></div>
         </section>
     
     
