fixed-welcome-pg

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|PT+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" type="text/css">
     <title>Always.Believe.</title>
   </head>
   <body>
-    <main class="container-fluid">
+    <main class="container-fluid"> 
         <section class="row d-flex justify-center p-0 m-0">
-            <!-- welcome message -->       
+            <!-- welcome message --> 
             <div class="col-12 p-0 m-0 " id="welcome">
                 <div class="row p-0 justify-content-center" id="opening">
                     <img src="images/huddle-dark.jpg" alt="team">
-                    <h1>ALWAYS. BELIEVE.</h1>
+                    <h1 id="always">ALWAYS</h1><h1 id="believe">BELIEVE</h1>
                     <p>This is a story about one of the greatest comeback in sports history.
                     </p>
                     <a href="_target"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
