--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
     <title>Always.Believe.</title>
   </head>
   <body>
-    <main class="container-fluid"> 
+    <main class="container-fluid">
         <section class="row d-flex justify-center p-0 m-0">
             <!-- welcome message --> 
             <div class="col-12 p-0 m-0 " id="welcome">
                 <div class="row p-0 justify-content-center" id="opening">
                     <img src="images/huddle-dark.jpg" alt="team">
-                    <h1 id="always">ALWAYS</h1><h1 id="believe">BELIEVE</h1>
+                    <h1 id="always">ALWAYS.</h1><h1 id="believe">BELIEVE.</h1>
                     <p>This is a story about one of the greatest comeback in sports history.
                     </p>
-                    <a href="_target"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-                </div>
+                    <a href="#chapt0"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+                </div> 
             </div>
 
 
