basic-layout-chapt0

--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
             <!-- welcome message -->
             <div class="col-12 p-0 m-0 " id="welcome"> 
                 <div class="row p-0 justify-content-center opening" > 
-                    <img src="images/huddle-dark.jpg" alt="team-huddle">
+                    <img src="images/chuddle-dark.jpg" alt="team-huddle">
                     <h1 class="para1">ALWAYS.</h1><h1 class="para2">BELIEVE.</h1>
                     <p>This is a story about one of the greatest comeback in sports history.</p>
                     <a href="#chapt0"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div> 
-            </div>
-
+            </div> 
  
-            <div class="col-12 p-0 m-0 d-flex align-items-center" id="chapt0">
+ 
+            <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
                 <img src="images/browns.jpg" alt="1964-browns"/>
                 
                 <p id="on-day">On 27 December 1964, the Cleveland Browns defeated the Baltimore Colts to win the National Football League Championship.</p>
                 <p id="drought">From that day on, the city of Cleveland would not see another major sports championship for over 50 years.</p>
-           </div> 
+                <a href="#chapt1"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+           </div>          
 
 
 
