fixed-animation-chapt0

--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
                     <p>This is a story about one of the greatest comeback in sports history.</p>
                     <a href="#chapt0"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div> 
-            </div> 
+            </div>       
  
  
             <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
                 <img src="images/browns.jpg" alt="1964-browns"/>
                 
                 <p id="on-day">On 27 December 1964, the Cleveland Browns defeated the Baltimore Colts to win the National Football League Championship.</p>
-                <p id="drought">From that day on, the city of Cleveland would not see another major sports championship for over 50 years.</p>
+                <p id="drought">From that day on, the city of Cleveland would not see another major sports championship</p> 
+                <h1 id="yrs">for over 50 years.</h1>  
                 <a href="#chapt1"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-           </div>          
+           </div>                  
 
 
 
