--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div> 
             </div>       
  
- 
+            <!-- prologue -->
             <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
                 <img src="images/browns.jpg" alt="1964-browns"/>
                 
@@ -37,27 +37,77 @@
 
 
 
-            <div class="col-12" id="chapt1"></div>
+            <!-- Kid from Akron -->
+            <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt1">
+                <div class="col-12 col-md-4" id="draftday">
+                </div>
+
+                <div class="col-12 col-md-4" id="rookie">
+                </div>
+
+                <div class="col-12 col-md-4" id="failures">
+                </div>
+            </div>
 
 
 
-            <div class="col-12" id="chapt2"></div>
 
 
 
-            <div class="col-12" id="chapt3"></div>
+
+            <!-- Departure -->
+            <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt2">
+                <div class="col-12 col-md-4" id="hate">
+                </div>
+
+                <div class="col-12 col-md-4" id="humbled">
+                </div>
+
+                <div class="col-12 col-md-4" id="back2back">
+                </div>
+            </div>
 
 
 
-            <div class="col-12" id="chapt4"></div>
 
 
 
+            <!-- I'm Coming Home -->
+            <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt3">
+                <div class="col-12 col-md-4" id="return">
+                </div>
+
+                <div class="col-12 col-md-4" id="leadership">
+                </div>
+
+                <div class="col-12 col-md-4" id="injuries">
+                </div>
+            </div>
+
+
+
+
+            <!-- 3-1 -->
+            <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt4">
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+            <!-- climax -->
+            <!-- The Greatest Comeback -->
             <div class="col-12" id="chapt5"></div>
 
 
 
-
+            <!-- Our Names in History -->
             <div class="col-12" id="chapt6"></div>
         </section>
     
