positions-fixed-chapt1

--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
             <!-- Kid from Akron -->
             <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt1">
                 <div class="col-12 col-md-9" id="draftday">
+                    <div id="draftquote">
+                    <blockquote class="blockquote">
+                        <p class="mb-0">“With the first pick in the 2003 nba draft, the cleveland cavaliers select lebron james.”</p>
+                    </blockquote></div>
+                    <div id="narration-1">
+                        <p>The NBA draft. A day where aspiring basketball players look forward to getting selected by professional teams.</p>
+                    </div>
+                    <div id="narration-2">
+                        <p>For 18-year-old LeBron James, the jump to the professional elite has come amazingly fast.</p>
+                    </div>  
+
 
                 </div>
 
@@ -48,7 +59,8 @@
 
                 <div class="col-12 col-md-12" id="failures">
                 </div>
-            </div>
+                <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
+            </div>      
 
 
 
