--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
                         <p class="mb-0" id="pickquote">“With the 1st pick in the 2003 NBA draft, the Cleveland Cavaliers select Lebron James.”</p>
                     </blockquote></div>
                     <div id="narration-1">
-                        <p>The NBA draft. A day where aspiring basketball players look forward to getting selected by professional teams.</p>
+                        <p>The NBA draft.</p> 
                     </div>
                     <div id="narration-2">  
-                        <p>For 18-year-old LeBron James, the jump to the professional elite came amazingly fast.</p>
+                        <p>A day where aspiring basketball players look forward to getting selected by professional teams.</p>
+                    </div>
+                    <div id="narration-3">  
+                        <p>For the 18-year-old LeBron James, the jump to the professional elite came amazingly fast.</p>
                     </div>  
                     <a href="#failures"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>  
-                </div>
+                </div>    
 
                 <div class=" d-none d-md-block col-12 col-md-3" id="rookie">
                 </div>
