chapt1-halfway-checkpoint

--- a/index.html
+++ b/index.html
@@ -38,28 +38,32 @@
 
 
             <!-- Kid from Akron -->
-            <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt1">
+            <!-- <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt1">
                 <div class="col-12 col-md-9" id="draftday">
                     <div id="draftquote">
                     <blockquote class="blockquote">
-                        <p class="mb-0" id="pickquote">“With the 1st pick in the 2003 NBA draft, the Cleveland Cavaliers select Lebron James.”</p>
-                    </blockquote></div>
-                    <div id="narration-1">
+                        <p class="mb-0 fadeIn1" id="pickquote">“With the 1st pick in the 2003 NBA draft, the Cleveland Cavaliers select Lebron James.”</p>
+                    </blockquote></div> 
+                    <div id="narration-1" class="fadeIn2">
                         <p>The NBA draft.</p> 
                     </div>
-                    <div id="narration-2">  
+                    <div id="narration-2" class="fadeIn3">  
                         <p>A day where aspiring basketball players look forward to getting selected by professional teams.</p>
                     </div>
-                    <div id="narration-3">  
-                        <p>For the 18-year-old LeBron James, the jump to the professional elite came amazingly fast.</p>
+                    <div id="narration-3" class="fadeIn4">
+                        <p>For the 18-year-old kid from Akron, the jump to the professional elite came amazingly fast.</p>
                     </div>  
                     <a href="#failures"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>  
                 </div>    
 
                 <div class=" d-none d-md-block col-12 col-md-3" id="rookie">
-                </div>
+                </div>  -->
 
-                <div class="col-12 col-md-12" id="failures"> 
+                <div class="col-12 col-md-12" id="failures">
+                    <div class="row fadeIn1">There was excitement surrounding what the Cavaliers can accomplish. The future looked extremely bright.</div>
+                    <div class="row fadeIn2">He managed to bring Cavaliers far but falls short each time.</div>
+                    <div class="row fadeIn3">This was just the beginning for LeBron, his championship journey still unfinished but well along its way.</div>
+                    <div class="row fadeIn4"> The twists and turns on the way, however, no one could see coming.</div>
                 </div>
                 
             </div>      
