created-bounce-class

--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
     <main class="container-fluid">
         <section class="row d-flex justify-center p-0 m-0">
             <!-- welcome message -->
-            <!-- <div class="col-12 p-0 m-0 " id="welcome"> 
+            <div class="col-12 p-0 m-0 " id="welcome"> 
                 <div class="row p-0 justify-content-center opening" > 
                     <img src="images/chuddle-dark.jpg" alt="team-huddle">
                     <h1 class="para1">ALWAYS.</h1><h1 class="para2">BELIEVE.</h1>
                     <p>This is a story about one of the greatest comeback in sports history.</p>
                     <a href="#chapt0"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div> 
-            </div>        -->
+            </div>       
  
             <!-- prologue -->
-            <!-- <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
+            <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
                 <img src="images/browns.jpg" alt="1964-browns"/>
                 
                 <p id="on-day">On 27 December 1964, the Cleveland Browns defeated the Baltimore Colts to win the National Football League Championship.</p>
                 <p id="drought">From that day on, the city of Cleveland would not see another major sports championship</p> 
                 <h1 id="yrs">for over 50 years.</h1>  
                 <a href="#chapt1"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-            </div>                        -->
+            </div>                       
 
 
 
             <!-- Kid from Akron -->
-            <!-- <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt1">
+            <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt1">
                 <div class="col-12 col-md-9" id="draftday">
                     <div id="draftquote">
                     <blockquote class="blockquote">
@@ -53,17 +53,23 @@
                     <div id="narration-3" class="fadeIn4">
                         <p>For the 18-year-old kid from Akron, the jump to the professional elite came amazingly fast.</p>
                     </div>  
-                    <a href="#failures"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>  
+                    <a href="#failures"><i class="fa fa-arrow-circle-right bounce" aria-hidden="true"></i></a>  
                 </div>    
 
                 <div class=" d-none d-md-block col-12 col-md-3" id="rookie">
-                </div>  -->
+                </div> 
 
                 <div class="col-12 col-md-12" id="failures">
-                    <div class="row fadeIn1">There was excitement surrounding what the Cavaliers can accomplish. The future looked extremely bright.</div>
-                    <div class="row fadeIn2">He managed to bring Cavaliers far but falls short each time.</div>
-                    <div class="row fadeIn3">This was just the beginning for LeBron, his championship journey still unfinished but well along its way.</div>
-                    <div class="row fadeIn4"> The twists and turns on the way, however, no one could see coming.</div>
+
+
+                    <!-- <div class="row d-flex flex-wrap flex-col align-items-center" id="hope">
+                        <div class="fadeIn1"><p>There was excitement surrounding what the Cavaliers can accomplish. The future looked extremely bright.</p></div>
+                        <div class="fadeIn2"><p>He managed to bring Cavaliers far but falls short each time.</p></div>
+                    </div> -->
+                    <!-- <div class="row" id="fall-short">
+                        <div class="row fadeIn3"><p>This was just the beginning for LeBron, his championship journey still unfinished but well along its way.</p></div>
+                        <div class="row fadeIn4"><p>The twists and turns on the way, however, no one could see coming.</p></div>
+                    </div> -->
                 </div>
                 
             </div>      
