--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
     <main class="container-fluid">
         <section class="row d-flex justify-center p-0 m-0">
             <!-- welcome message -->
-            <div class="col-12 p-0 m-0 " id="welcome"> 
+            <!-- <div class="col-12 p-0 m-0 " id="welcome"> 
                 <div class="row p-0 justify-content-center opening" > 
                     <img src="images/chuddle-dark.jpg" alt="team-huddle">
                     <h1 class="para1">ALWAYS.</h1><h1 class="para2">BELIEVE.</h1>
                     <p>This is a story about one of the greatest comeback in sports history.</p>
                     <a href="#chapt0"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div> 
-            </div>       
+            </div>        -->
  
             <!-- prologue -->
-            <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
+            <!-- <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
                 <img src="images/browns.jpg" alt="1964-browns"/>
                 
                 <p id="on-day">On 27 December 1964, the Cleveland Browns defeated the Baltimore Colts to win the National Football League Championship.</p>
                 <p id="drought">From that day on, the city of Cleveland would not see another major sports championship</p> 
                 <h1 id="yrs">for over 50 years.</h1>  
                 <a href="#chapt1"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-            </div>                       
+            </div>                        -->
 
 
 
@@ -45,8 +45,8 @@
                         <p class="mb-0 fadeIn1" id="pickquote">“With the 1st pick in the 2003 NBA draft, the Cleveland Cavaliers select Lebron James.”</p>
                     </blockquote></div> 
                     <div id="narration-1" class="fadeIn2">
-                        <p>The NBA draft.</p> 
-                    </div>
+                        <p>The NBA draft.</p>    
+                    </div> 
                     <div id="narration-2" class="fadeIn3">  
                         <p>A day where aspiring basketball players look forward to getting selected by professional teams.</p>
                     </div>
