completed-chapt1-basics

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <main class="container-fluid">
         <section class="row d-flex justify-center p-0 m-0">
-            <!-- welcome message -->
+            <!-- welcome message --> 
             <!-- <div class="col-12 p-0 m-0 " id="welcome"> 
                 <div class="row p-0 justify-content-center opening" > 
                     <img src="images/chuddle-dark.jpg" alt="team-huddle">
@@ -39,7 +39,7 @@
 
             <!-- Kid from Akron -->
             <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt1">
-                <div class="col-12 col-md-9" id="draftday">
+                <!-- <div class="col-12 col-md-9" id="draftday">
                     <div id="draftquote">
                     <blockquote class="blockquote">
                         <p class="mb-0 fadeIn1" id="pickquote">“With the 1st pick in the 2003 NBA draft, the Cleveland Cavaliers select Lebron James.”</p>
@@ -54,24 +54,26 @@
                         <p>For the 18-year-old kid from Akron, the jump to the professional elite came amazingly fast.</p>
                     </div>  
                     <a href="#failures"><i class="fa fa-arrow-circle-right bounce" aria-hidden="true"></i></a>  
-                </div>    
+                </div>     -->  
 
                 <div class=" d-none d-md-block col-12 col-md-3" id="rookie">
                 </div> 
 
-                <div class="col-12 col-md-12" id="failures">
-
-
-                    <!-- <div class="row d-flex flex-wrap flex-col align-items-center" id="hope">
-                        <div class="fadeIn1"><p>There was excitement surrounding what the Cavaliers can accomplish. The future looked extremely bright.</p></div>
-                        <div class="fadeIn2"><p>He managed to bring Cavaliers far but falls short each time.</p></div>
-                    </div> -->
-                    <!-- <div class="row" id="fall-short">
-                        <div class="row fadeIn3"><p>This was just the beginning for LeBron, his championship journey still unfinished but well along its way.</p></div>
-                        <div class="row fadeIn4"><p>The twists and turns on the way, however, no one could see coming.</p></div>
-                    </div> -->
+                <div class="col-12 col-md-12" id="failures">  
+                    <div class="row">
+                        <div class="col-12 col-md-6 fadeIn1"><img src="images/vspistons.jpg" alt="vspistons"></div>
+                        <div class="col-12 col-md-6 mt-2">
+                        <div class="fadeIn2"><p>There was excitement surrounding what the Cavaliers can accomplish. The future looked extremely bright.</p></div>
+                        <div class="fadeIn3"><p>Lebron's journey to getting a championship was riddled with many failures.</p></div>
+                        </div>
+                    </div>
+                    <div class="row mt-5"> 
+                        <div class="col-12 col-md-6 mt-2">
+                        <div class="fadeIn4"><p>In 2007, he finally brought his team to the NBA finals but lost to the Spurs.</p></div>
+                        </div>
+                        <div class="col-12 col-md-6 fadeIn4"><img src="images/vsspurs.jpg" alt="vsspurs"></div>
+                    </div>
                 </div>
-                
             </div>      
 
 
