double-panels-layout

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <main class="container-fluid">
         <section class="row d-flex justify-center p-0 m-0">
+            <!-- improvements needed are in asterisks all *check font-size, spacing again* -->
             <!-- welcome message --> 
             <!-- <div class="col-12 p-0 m-0 " id="welcome"> 
                 <div class="row p-0 justify-content-center opening" > 
@@ -23,7 +24,7 @@
                     <p>This is a story about one of the greatest comeback in sports history.</p>
                     <a href="#chapt0"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div> 
-            </div>        -->
+            </div> -->
  
             <!-- prologue -->
             <!-- <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
@@ -33,11 +34,11 @@
                 <p id="drought">From that day on, the city of Cleveland would not see another major sports championship</p> 
                 <h1 id="yrs">for over 50 years.</h1>  
                 <a href="#chapt1"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-            </div>                        -->
+            </div> -->
 
 
 
-            <!-- Kid from Akron -->
+            <!-- Kid from Akron  *backgroundimg for mobile vers?* -->
             <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt1">
                 <!-- <div class="col-12 col-md-9" id="draftday">
                     <div id="draftquote">
@@ -54,26 +55,21 @@
                         <p>For the 18-year-old kid from Akron, the jump to the professional elite came amazingly fast.</p>
                     </div>  
                     <a href="#failures"><i class="fa fa-arrow-circle-right bounce" aria-hidden="true"></i></a>  
-                </div>     -->  
+                </div>       --> 
 
-                <div class=" d-none d-md-block col-12 col-md-3" id="rookie">
-                </div> 
+                <!-- <div class=" d-none d-md-block col-12 col-md-3" id="rookie">
+                </div>  -->
 
-                <div class="col-12 col-md-12" id="failures">  
-                    <div class="row">
-                        <div class="col-12 col-md-6 fadeIn1"><img src="images/vspistons.jpg" alt="vspistons"></div>
-                        <div class="col-12 col-md-6 mt-2">
+                <div class="col-12 col-md-12 d-flex flex-wrap p-0 m-0 flex-row" id="failures">   
+                    <div class="col-12 col-lg-6" id="fail1">
                         <div class="fadeIn2"><p>There was excitement surrounding what the Cavaliers can accomplish. The future looked extremely bright.</p></div>
-                        <div class="fadeIn3"><p>Lebron's journey to getting a championship was riddled with many failures.</p></div>
-                        </div>
                     </div>
-                    <div class="row mt-5"> 
-                        <div class="col-12 col-md-6 mt-2">
+                    <div class="col-12 col-lg-6" id="fail2"> 
+                        <div class="fadeIn3"><p>However, Lebron's journey to getting a championship was riddled with many failures.</p></div>
                         <div class="fadeIn4"><p>In 2007, he finally brought his team to the NBA finals but lost to the Spurs.</p></div>
-                        </div>
-                        <div class="col-12 col-md-6 fadeIn4"><img src="images/vsspurs.jpg" alt="vsspurs"></div>
-                    </div>
-                </div>
+                    </div> 
+                    <a href="#chapt2"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+                </div> 
             </div>      
 
 
