--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
   <body>
     <main class="container-fluid p-0 m-0">
         <section class="row d-flex justify-center p-0 m-0">
-            <!-- improvements needed are in asterisks all *check font-size, spacing again* -->
-            <!-- welcome message --> 
-            <!-- <div class="col-12 p-0 m-0 " id="welcome"> 
+            <!-- improvements needed are in asterisks all *check font-size, spacing, paraphrase* -->
+            <!-- welcome message -->
+            <div class="col-12 p-0 m-0 " id="welcome"> 
                 <div class="row p-0 justify-content-center opening" > 
                     <img src="images/chuddle-dark.jpg" alt="team-huddle">
                     <h1 class="para1">ALWAYS.</h1><h1 class="para2">BELIEVE.</h1>
                     <p>This is a story about one of the greatest comeback in sports history.</p>
                     <a href="#chapt0"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div> 
-            </div> -->
+            </div> 
  
             <!-- prologue -->
-            <!-- <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
+            <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
                 <img src="images/browns.jpg" alt="1964-browns"/>
                 
                 <p class="fadeIn1" id="on-day">On 27 December 1964, the Cleveland Browns defeated the Baltimore Colts to win the National Football League Championship.</p>
                 <p class="fadeIn2" id="drought">From that day on, the city of Cleveland would not see another major sports championship</p> 
                 <h1 class="fadeIn3" id="yrs">for over 50 years.</h1>  
                 <a href="#chapt1"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-            </div> -->
+            </div>
 
 
 
@@ -44,27 +44,43 @@
                     <img src="images/vspistonsdark.jpg" alt="vspistons">    
                     <div id="draftquote">       
                     <blockquote class="blockquote">
-                        <p class="mb-0 fadeIn1" id="pickquote">“With the 1st pick in the 2003 NBA draft, the Cleveland Cavaliers select Lebron James.”</p>
+                        <p class="mb-0 fadeIn1" id="pickquote">“With the 1st pick in the 2003 NBA draft, the Cleveland Cavaliers select... Lebron James!”</p>
                     </blockquote></div> 
-                    <div id="narration-1" class="fadeIn2">
-                        <p>The NBA draft.</p>     
-                    </div> 
-                    <div id="narration-2" class="fadeIn3">  
+                    <div id="nar1" class="fadeIn2">
+                        <p>The NBA draft.
+                        </p>     
+                    </div>   
+                    <div id="nar2" class="fadeIn3">  
                         <p>A day where aspiring basketball players look forward to getting selected by professional teams.</p>
                     </div>
-                    <div id="narration-3" class="fadeIn4">
-                        <p>For the 18-year-old kid from Akron, the jump to the professional elite came amazingly fast. 
-                        There was excitement surrounding what the Cavaliers can accomplish. The future looked extremely bright. 
-                        However, Lebron's journey to getting a championship was riddled with many failures.
-                        In 2007, he finally brought his team to the NBA finals but lost to the Spurs.
+                    <div id="nar3" class="fadeIn4">
+                        <p>
+                        For the 18-year-old kid from Akron, the jump to the professional elite came amazingly fast.
                         </p>
                     </div>   
                 </div>       
 
                 <div class=" d-none d-md-block col-12 col-md-3" id="rookie">
                 </div> 
+                <a href="#chapt1b"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+            </div>
+
+            <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt1b"> 
+                    <img src="images/vsspurs.jpg" alt="vsspurs">    
+                    <div id="nar4" class="fadeIn1">
+                        <p>There was excitement surrounding what the Cavaliers can accomplish. 
+                        The future looked extremely bright. 
+                        </p>     
+                    </div> 
+                    <div id="nar5" class="fadeIn2">  
+                        <p>However, Lebron's journey to getting a championship was riddled with many failures.</p>
+                    </div>
+                    <div id="nar6" class="fadeIn3">
+                        <p>In 2007, he brought his team to the NBA finals but lost to the Spurs.
+                        </p>
+                    </div>    
                 <a href="#chapt2"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-            </div>      
+            </div>         
 
 
 
