--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                     <blockquote class="blockquote">
                         <p class="mb-0 fadeIn1" id="pickquote">“With the 1st pick in the 2003 NBA draft, the Cleveland Cavaliers select... Lebron James!”</p>
                     </blockquote></div> 
-                    <div id="nar1" class="fadeIn2">
+                    <div id="c11" class="fadeIn2">
                         <p>The NBA draft.
                         </p>     
                     </div>   
-                    <div id="nar2" class="fadeIn3">  
+                    <div id="c12" class="fadeIn3">  
                         <p>A day where aspiring basketball players look forward to getting selected by professional teams.</p>
                     </div>
-                    <div id="nar3" class="fadeIn4">
+                    <div id="c13" class="fadeIn4">
                         <p>
                         For the 18-year-old kid from Akron, the jump to the professional elite came amazingly fast.
                         </p>
@@ -69,15 +69,15 @@
 
             <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row" id="chapt1b"> 
                     <img src="images/vsspurs.jpg" alt="vsspurs">    
-                    <div id="nar4" class="fadeIn1">
+                    <div id="c14" class="fadeIn1">
                         <p>There was excitement surrounding what the Cavaliers can accomplish. 
                         The future looked extremely bright. 
                         </p>     
                     </div> 
-                    <div id="nar5" class="fadeIn2">  
+                    <div id="c15" class="fadeIn2">  
                         <p>However, Lebron's championship journey was riddled with many failures.</p>
                     </div>
-                    <div id="nar6" class="fadeIn3">
+                    <div id="c16" class="fadeIn3">
                         <p>In 2007, he brought his team to the NBA finals for the 1st time. 
                         But they lost to the Spurs, who were veterans.</p>
                     </div>    
@@ -88,13 +88,33 @@
             
 
 
-
-            <!-- Departure -->
-            <div class="col-12 p-0 m-0" id="chapt2">
-                <div class="row d-flex flex-wrap flex-row justify-items-center">
+ 
+            <!-- Departure -->  
+            <div class="col-12 p-0 m-0" id="chapt2">          
+                <div class="row d-flex flex-wrap flex-row justify-items-center p-2">
                     <div class="col-12" id="villain"><img src="images/masked-bron.png" alt="villain"><h1>VILLAIN</h1></div>
-                    <div class="col-12">text in front</div>                            
+                    <div class="col-12 p-2 m-2" id="c21"><p>“I thought he was, <br>
+                    I guess, more of a competitor...”</p></div>
+                    <div class="col-12 p-2 m-2" id="c22"><p>“LeBron will never be 'the guy'. <br>
+                    I wish he would have tried to win it by himself as ‘the guy.’ ”</p></div>                                       
                 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                
                     <!-- <div id="nar4" class="fadeIn1">
                         <p>There was excitement surrounding what the Cavaliers can accomplish. 
                         The future looked extremely bright. 
