added-slideshow-chapt3

--- a/index.html
+++ b/index.html
@@ -121,24 +121,20 @@
     
 
             <!-- I'm Coming Home -->
-            <div class="col-12 d-flex flex-wrap p-0 m-0 flex-row justify-content-center" id="chapt3">
-                <div class="col-12" id="c31">
-                <p>Humbled by his loss to the Mavs, Lebron loses his villain role and 
+            <div class="col-12 p-0 m-0" id="chapt3">
+                <p class="fadeIn1" id="c31">Humbled by his loss to the Mavs, Lebron loses his villain role and
                 regain his joy of playing basketball again.
                 </p>
+                <div class=" mb-2 p-0 m-0 fadeIn2" id="c32">  
+                    <img class="fadeIn3" src="images/nbafinals11.jpg" alt="finals11">
+                    <img class="fadeIn4" src="images/nbafinals12.jpg" alt="finals12">
+                    <img class="fadeIn4" src="images/miamichamp.jpg" alt="miamichamp">
+                    <p class="fadeIn4">Since then, Lebron and the Miami Heat went on to win 2 straight NBA championships.
+                    </p>
+                    <p class="fadeIn4">After his stint in Miami, Lebron annouces: "I'm coming home."
+                    </p>
                 </div>
-
-                <div class="col-12 mb-5" id="c32">
-                <p>Since then, Lebron and the Miami Heat went on to win 2 straight NBA championships.
-                </p> 
-                <img src="images/nbafinals11.jpg" alt="finals11">
-                </div>
-
-                <div class="col-12" id="c33">
-                <img src="images/nbafinals12.jpg" alt="finals12">
-                <p>After his stint in Miami, Lebron annouces: "I'm coming home."
-                </p>
-                </div>
+                <a href="#chapt4"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
             </div> 
 
             <!-- climax -->
