--- a/index.html
+++ b/index.html
@@ -122,20 +122,25 @@
 
             <!-- I'm Coming Home -->
             <div class="col-12 p-0 m-0" id="chapt3">
-                <p class="fadeIn1" id="c31">Humbled by his loss to the Mavs, Lebron loses his villain role and
-                regain his joy of playing basketball again.
-                </p>
-                <div class=" mb-2 p-0 m-0 fadeIn2" id="c32">  
-                    <img class="fadeIn3" src="images/nbafinals11.jpg" alt="finals11">
-                    <img class="fadeIn4" src="images/nbafinals12.jpg" alt="finals12">
-                    <img class="fadeIn4" src="images/miamichamp.jpg" alt="miamichamp">
-                    <p class="fadeIn4">Since then, Lebron and the Miami Heat went on to win 2 straight NBA championships.
+                <div class="row p-0 m-0 justify-content-center" > 
+                    <p id="c31" class="fadeIn0 p-0 m-0">Humbled by his loss to the Mavs, 
+                    Lebron loses his villain role and
+                    regain his joy of playing basketball again.  
                     </p>
-                    <p class="fadeIn4">After his stint in Miami, Lebron annouces: "I'm coming home."
-                    </p>
+                    <img class="fadeIn2" src="images/nbafinals11.jpg" alt="finals11">
+                    <img class="fadeIn3" src="images/hug.jpg" alt="finals12">
+                    <img class="fadeIn4" src="images/miamichamp2.jpg" alt="miamichamp">
+                    <p class="fadeIn5" id="c32">Since then, Lebron and the Miami Heat 
+                    went on to win 2 straight NBA championships. 
+                    </p>     
+                    <div class="fadeIn6" id="c33">
+                    <p class="text-align-center">After his stint in Miami, Lebron annouces: <br>
+                    <h1 class="text-align-center">"I'm coming home."</h1> 
+                    </p></div>  
                 </div>
                 <a href="#chapt4"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-            </div> 
+            </div>    
+ 
 
             <!-- climax -->
             <!-- The Greatest Comeback -->
