--- a/index.html
+++ b/index.html
@@ -49,16 +49,17 @@
             <!-- Kid from Akron  -->
 
             <div class="col-12 p-0" id="chapt1">
-                <div class="row">
-                    <div class="col-12 col-lg-6"> 
+                <div class="row justify-content-center">
+                    <div class="col-12">
                         <div class="d-flex flex-row justify-content-center">
                             <h1 id="a1">The Kid from Akron</h1>
                             <div><img src="images/chapt1/bron1.png" alt="youngbron">
                             <h1 id="a2">LeBron</h1><h1 id="a3">James</h1></div>
                         </div>
-                        <a href="#" class="d-lg-none"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+                        <a href="#chapt1b"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                     </div>
-                    <div class="col-12 col-lg-6 p-5">
+                    <div class="col-12 gold" id="chapt1b">
+                        <div class="row p-2 m-5 redbg">
                         <p class="fadeIn0">“With the 1st pick in the 
                             2003 NBA draft, the Cleveland Cavaliers select... Lebron James!”</p>
                         
@@ -70,9 +71,10 @@
                         <p class="fadeIn3">
                             For the 18-year-old kid from Akron, the jump to the professional 
                             elite came amazingly fast.</p>
-                        <a href="#chapt1b"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+                        </div>
+                        <a href="#chapt1c"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                     </div>
-                    <div class="col-12 col-lg-6 p-5">
+                    <!-- <div class="col-12 col-lg-6 p-5">
                         <p class="fadeIn0">There was excitement surrounding what 
                             the Cavaliers can accomplish. 
                             The future looked extremely bright. </p>
@@ -99,7 +101,7 @@
                             elite came amazingly fast.</p>
                         <a href="#chapt1b"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                     </div>
-                </div>
+                </div> -->
 
 
 
