added panels to chapt1b

--- a/index.html
+++ b/index.html
@@ -58,9 +58,21 @@
                         </div>
                         <a href="#chapt1b"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                     </div>
-                    <div class="col-12 gold" id="chapt1b">
-                        <div class="row p-2 m-5 redbg">
-                        <p class="fadeIn0">“With the 1st pick in the 
+                    <div class="col-12 col-md-6 p-0 m-0 gbor" id="chapt1b">
+                        <div class="row p-3 m-0 justify-content-around">
+                            <div class="gbor box1" id=ib1></div>
+                            <div class="gbor box1" id=ib2></div>
+                            <div class="gbor box1" id=ib3></div>
+
+
+
+
+
+
+
+
+
+                        <!-- <p class="fadeIn0">“With the 1st pick in the 
                             2003 NBA draft, the Cleveland Cavaliers select... Lebron James!”</p>
                         
                         <p class="fadeIn1">The NBA draft.</p>
@@ -70,7 +82,7 @@
                         
                         <p class="fadeIn3">
                             For the 18-year-old kid from Akron, the jump to the professional 
-                            elite came amazingly fast.</p>
+                            elite came amazingly fast.</p> -->
                         </div>
                         <a href="#chapt1c"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                     </div>
