--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="col-12 p-0" id="chapt1">
                 <div class="row justify-content-center">
-                    <div class="col-12">
+                    <div class="col-12 p-0">
                         <div class="d-flex flex-row justify-content-center">
                             <h1 id="a1">The Kid from Akron</h1>
                             <div><img src="images/chapt1/bron1.png" alt="youngbron">
@@ -58,21 +58,29 @@
                         </div>
                         <a href="#chapt1b"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                     </div>
-                    <div class="col-12 col-md-6 p-0 m-0 gbor" id="chapt1b">
-                        <div class="row p-3 m-0 justify-content-around">
-                            <div class="gbor box1" id=ib1></div>
-                            <div class="gbor box1" id=ib2></div>
-                            <div class="gbor box1" id=ib3></div>
 
+                    <div class="col-12 col-lg-9 p-0 m-0" id="chapt1b">
+                        <div class="row p-0 m-0 justify-content-around">
+                            <div class="box1 mt-1 fadeIn1" id=ib1></div>
+                            <div class="box1 mt-5 fadeIn2" id=ib2></div>
+                            <div class="box1 mt-3 fadeIn3" id=ib3></div>
+                        </div>
+                        <div class="row p-1 m-2 justify-content-center align-items-start" id="a4">
+                            <div class="p-3 gbor fadeIn0">
+                                <p>Even though Lebron James was at High School, he was 
+                                    the no. 1 pick in the NBA draft in 2003.</p>
+                                <p>Since then, there was excitement and hopes for him
+                                    to carry the Cleveland Cavaliers to win a Championship.</p>
+                                <p>In 2007, he managed to lead the Cavaliers to the Finals 
+                                    but were defeated by the veteran-filled Spurs.
+                                </p>
+                            </div>   
+                        </div>
+                        <a href="#chapt1c"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
+                    </div>
+            </div>
 
-
-
-
-
-
-
-
-                        <!-- <p class="fadeIn0">“With the 1st pick in the 
+                    <!-- <p class="fadeIn0">“With the 1st pick in the 
                             2003 NBA draft, the Cleveland Cavaliers select... Lebron James!”</p>
                         
                         <p class="fadeIn1">The NBA draft.</p>
@@ -83,9 +91,7 @@
                         <p class="fadeIn3">
                             For the 18-year-old kid from Akron, the jump to the professional 
                             elite came amazingly fast.</p> -->
-                        </div>
-                        <a href="#chapt1c"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-                    </div>
+
                     <!-- <div class="col-12 col-lg-6 p-5">
                         <p class="fadeIn0">There was excitement surrounding what 
                             the Cavaliers can accomplish. 
@@ -116,8 +122,6 @@
                 </div> -->
 
 
-
-            </div>
 
  
             <!-- To South Beach -->  
