added chapt1 animations

--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
                 <div class="row justify-content-center">
                     <div class="col-12 p-0">
                         <div class="d-flex flex-row justify-content-center">
-                            <h1 id="a1">The Kid from Akron</h1>
-                            <div><img src="images/chapt1/bron1.png" alt="youngbron">
-                            <h1 id="a2">LeBron</h1><h1 id="a3">James</h1></div>
+                            <h1 class="fadeIn1" id="a1">The Kid from Akron</h1>
+                            <div><img class="fadeIn2"src="images/chapt1/bron1.png" alt="youngbron">
+                            <h1 class="fadeIn3" id="a2">LeBron</h1><h1 class="fadeIn3" id="a3">James</h1></div>
                         </div>
                         <a href="#chapt1b"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                     </div>
 
                     <div class="col-12 col-lg-9 p-0 m-0" id="chapt1b">
                         <div class="row p-0 m-0 justify-content-around">
-                            <div class="box1 mt-1 fadeIn1" id=ib1></div>
-                            <div class="box1 mt-5 fadeIn2" id=ib2></div>
+                            <div class="box1 mt-3 fadeIn1" id=ib1></div>
+                            <div class="box1 mt-3 fadeIn2" id=ib2></div>
                             <div class="box1 mt-3 fadeIn3" id=ib3></div>
                         </div>
                         <div class="row p-1 m-2 justify-content-center align-items-start" id="a4">
-                            <div class="p-3 gbor fadeIn0">
+                            <div class="p-3 mt-2 fadeIn0">
                                 <p>Even though Lebron James was at High School, he was 
                                     the no. 1 pick in the NBA draft in 2003.</p>
                                 <p>Since then, there was excitement and hopes for him
