--- a/index.html
+++ b/index.html
@@ -27,33 +27,33 @@
             
              -->
             <!-- welcome message -->
-            <!-- <div class="col-12 p-0 m-0 " id="welcome"> 
+            <div class="col-12 p-0 m-0 " id="welcome"> 
                 <div class="row p-0 justify-content-center opening" > 
                     <img src="images/chuddle-dark.jpg" alt="team-huddle">
                     <h1 class="para1">ALWAYS.</h1><h1 class="para2">BELIEVE.</h1>
                     <p>This is a story about one of the greatest comeback in sports history.</p>
                     <a href="#chapt0"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
                 </div> 
-            </div>  -->
+            </div> 
  
             <!-- prologue -->
-            <!-- <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
+            <div class="col-12 p-0 m-0 d-flex justify-content-center" id="chapt0">
                 <img src="images/browns.jpg" alt="1964-browns"/>
                 
                 <p class="fadeIn1" id="c01">On 27 December 1964, the Cleveland Browns defeated the Baltimore Colts to win the National Football League Championship.</p>
                 <p class="fadeIn2" id="c02">From that day on, the city of Cleveland would not see another major sports championship</p> 
                 <h1 class="fadeIn3" id="c03">for over 50 years.</h1>  
                 <a href="#chapt1"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
-            </div>  -->
+            </div> 
 
             <!-- Kid from Akron  -->
 
             <div class="col-12 p-0" id="chapt1">
-                <div class="row justify-content-center">
+                <div class="row justify-content-center" id="chapt1a">
                     <div class="col-12 p-0">
                         <div class="d-flex flex-row justify-content-center">
                             <h1 class="fadeIn1" id="a1">The Kid from Akron</h1>
-                            <div><img class="fadeIn2"src="images/chapt1/bron1.png" alt="youngbron">
+                            <div><img class="fadeIn2" id="bron1" src="images/chapt1/bron1.png" alt="youngbron">
                             <h1 class="fadeIn3" id="a2">LeBron</h1><h1 class="fadeIn3" id="a3">James</h1></div>
                         </div>
                         <a href="#chapt1b"><i class="fa fa-angle-double-down" aria-hidden="true"></i></a>
@@ -66,12 +66,12 @@
                             <div class="box1 mt-3 fadeIn3" id=ib3></div>
                         </div>
                         <div class="row p-1 m-2 justify-content-center align-items-start" id="a4">
-                            <div class="p-3 mt-2 fadeIn0">
-                                <p>Even though Lebron James was at High School, he was 
+                            <div class="p-3 mt-2 fadeIn1">
+                                <p class="fadeIn1">Even though Lebron James was at High School, he was 
                                     the no. 1 pick in the NBA draft in 2003.</p>
-                                <p>Since then, there was excitement and hopes for him
+                                <p class="fadeIn2">Since then, there was excitement and hopes for him
                                     to carry the Cleveland Cavaliers to win a Championship.</p>
-                                <p>In 2007, he managed to lead the Cavaliers to the Finals 
+                                <p class="fadeIn3">In 2007, he managed to lead the Cavaliers to the Finals 
                                     but were defeated by the veteran-filled Spurs.
                                 </p>
                             </div>   
